--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,124 +1,39 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+:root {
+  --black: #333;
+  --gray: #555;
+  --white: #fff;
+  --honeydew: #f1faee;
+  --red: #e63946;
+  --blue: #1d3557;
+  --celadon-blue: #457b9d;
+  --text-size-base: 18px;
 }
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+
+* {
+  box-sizing: border-box;
 }
+
+html,body {
+  background-color: var(--honeydew);
+  color: var(--blue);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: var(--text-size-base);
+  line-height: 1.4;
+}
+
 body {
-  line-height: 1;
+  margin: 0;
 }
-ol,
-ul {
-  list-style: none;
+
+h1,h2,h3,h4,h5,h6 {
+  color: var(--blue);
 }
-blockquote,
-q {
-  quotes: none;
+a {
+  color: var(--red);
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+
+.banner-img {
+  margin-bottom: 1rem;
+  height: 17rem;
+  border-radius: 1rem;
 }
