--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,8 @@
   --black: #333;
   --gray: #555;
   --white: #fff;
-  --honeydew: #f1faee;
+  --honeydew: #F7F5FB;
+  /* --honeydew: #f1faee; */
   --red: #e63946;
   --blue: #1d3557;
   --celadon-blue: #457b9d;
