--- a/src/components/Blog/Posts.module.css
+++ b/src/components/Blog/Posts.module.css
@@ -1,6 +1,6 @@
 .article{
     margin-bottom: 1rem;
-    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    transition: 1s transform cubic-bezier(.155,1.105,.295,1.12),1s box-shadow,1s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
     cursor: pointer;
 }
 .article:hover{
